made about section mobile responsive, add media query hook to change content into card, fix floating astronaut

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -17,12 +17,41 @@ html {
 }
 
 .skills img,
-.skills svg {
+.skills svg,
+.skills i {
 	width: 3rem;
-}
-.skills img,
-.skills svg {
 	cursor: pointer;
+	font-size: 3rem;
+}
+
+.skills .nextjs {
+	font-size: 3.6rem;
+}
+
+@media screen and (max-width: 640px) {
+	.skills img,
+	.skills svg,
+	.skills i {
+		width: 2rem;
+		cursor: pointer;
+		font-size: 2rem;
+	}
+}
+
+@media screen and (max-width: 570px) {
+	.skills .nextjs {
+		font-size: 2.8rem;
+	}
+}
+
+@media screen and (max-width: 420px) {
+	.skills img,
+	.skills svg,
+	.skills i {
+		width: 1.5rem;
+		cursor: pointer;
+		font-size: 1.5rem;
+	}
 }
 
 /* 
